--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "proxy": "http://localhost:5000"
   }
 }
