--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://mujawareffat26:mujawareffat26@cpm.jejgrya.mongodb.net/?retryWrites=true&w=majority&appName=CPM
 JWT_SECRET=superSecretKey
+EMAIL_USER=mujawareffat26@gmail.com
+EMAIL_PASS=jmur uoif okrn mekq
